# Lumio-voice-engine

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml
.claude/: settings.json  settings.local.json
docs/: architecture.md  llm_postprocessing.md
lambda/: handler.py
postprocess-ui/: README.md  app.py  llm.py  pipeline.py  prompt.py  pyproject.toml  schema.py
scripts/: cloudwatch-dashboard.json  create_dashboard.sh  deploy.sh  init_db.py  run_local.py  send_test_job.sh
src/anchor_voice/: config.py  library.py  transcription.py
src/anchor_voice/components/: live_transcription.py  transcript.py
ui/: Dockerfile  app.py  config.py  db.py  models.py  requirements.txt  s3_results.py
worker/: Dockerfile  glossary.json  pyproject.toml
worker/src/pipeline/: audio.py  chunking.py  config.py  db.py  elevenlabs_transcription.py  events.py  job_status.py  lang_detect.py  main.py  merger.py  metrics.py  models.py  postprocess.py  rate_limit.py  results_writer.py  s3.py  transcription.py  translation.py
