[project]
name = "anchor-voice-worker"
version = "0.1.0"
description = "Production audio transcription pipeline worker (Sarvam + overlap stitching)"
requires-python = ">=3.12"
dependencies = [
    # Sarvam STT + Translation
    "sarvamai>=0.1.27",
    # torch — CPU-only, required by silero-vad
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    # Speaker overlap stitching
    "rapidfuzz>=3.6",
    # VAD for chunking
    "silero-vad>=5.1",
    # Audio manipulation
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    # Database
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    # AWS
    "boto3>=1.34",
    # Retry logic
    "tenacity>=8.2",
    # Structured logging
    "structlog>=24.1",
    # Environment
    "python-dotenv>=1.0",
]

[project.scripts]
pipeline = "pipeline.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.uv.sources]
# Force CPU-only torch to reduce image size (~1.5GB vs ~5GB GPU)
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
